Updated to String.format()